menu and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
         </app-side-nav>
         <div class="display-area" [ngClass]="{'display-area-shrink':sideNavStatus}">
             <!-- <p>Main Display Area</p> -->
-            <app-notes></app-notes>
+            <!-- <app-notes></app-notes> -->
+            <router-outlet></router-outlet>
         </div>
     </main>
 </div>
