--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,15 +4,26 @@
          <i class="fa-solid fa-bars"></i>
      </div>
 
-     <a class="navbar-brand px-4" href="#">Header and SideNav</a>
+     <a class="navbar-brand px-4" href="#"><h2>Keep</h2></a>
 
-     <form class="d-flex me-5">
-         <input class="form-control me-2" type="search" placeholder="Search">
+     <form class="search d-flex me-5">
+         <input name="search" class="form-control me-2" type="search" placeholder="Search">
          <button class="btn btn-outline-light" type="submit">Search</button>
      </form>
 
-     <div class="profile-logo">
-        <i class="fa-solid fa-user"></i>
+     <div class="icons">
+        <div class="logo">
+            <i class="fa-solid fa-rotate-right"></i>
+         </div>
+         <div class="logo">
+            <i class="fa-solid fa-table-list"></i>
+         </div>
+         <div class="logo">
+            <i class="fa-solid fa-gear"></i>
+         </div>
+         <div class="profile-logo">
+            <i class="fa-solid fa-user"></i>
+         </div>
      </div>
-
+     <!-- <h1 style="color:white">{{curr_search}}</h1> -->
 </nav>
