--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -15,7 +15,7 @@
     height:50px;
 }
 
-.nav-list-open .nav-list-item:hover{
+.nav-list-item:hover{
     
     background-color:lightgray;
     border-radius: 10px;
