--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -12,12 +12,12 @@
             <h4>No Item To Show</h4>
               </div>
 
-        <div  *ngFor="let note of noteItems;index as i" class="card" style="width: 14rem;">
+        <div  *ngFor="let note of noteItems;index as i" class="card">
             <div class="card-body">
               <h5 class="card-title">{{note.title}}</h5>
               <p class="card-text">{{note.content}}</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a class="card-link" (click)="removeTask(i)"><i class="fa-solid fa-trash" style="color:darkblue"></i></a>
+              <a class="card-link" (click)="archiveTask(i)"><i class="fa-solid fa-box-archive" style="color:darkblue"></i></a>
               </div>
           </div>
         </div>
