--- a/src/app/archive/archive.component.html
+++ b/src/app/archive/archive.component.html
@@ -2,13 +2,11 @@
     
     <div class="heading">
      <h4>Here are Your Archives</h4>
-    </div>
+    </div><br>
 
-       <div class="responses">
-
-             <h4 *ngIf="archivedItems.length==0">No Item To Show</h4>
+       <div class="container">
  
-         <div  *ngFor="let archive of archivedItems;index as i" class="card">
+         <div  *ngFor="let archive of archivedItems;index as i" class="item">
              <div class="card-body">
                <h5 class="card-title">{{archive.title}}</h5>
                <p class="card-text">{{archive.content}}</p>
