--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -5,58 +5,62 @@
     align-items: center;
     height: 100%;
     width:100%;
-    background-color: red;
 }
 .form-input{
     width:50%;
-    border-radius:20%;
-    margin-bottom:20px;
-}
-
-/* grid styles */
-
-/* .container{
-    display:grid;
-    justify-content: center;
-    grid-template-columns: 200px 200px 200px 200px;
-    grid-auto-rows: minmax(100px,auto);
-    grid-gap:20px;
-    background-color: aqua;
-    width:90%;
-}
-
-.item{
-    height:fit-content;
-    background-color: white;
-} 
- .card-body{
-    border:2px solid black;
-} */
-
-/* kuch bhi styles */
-.container {
     display: flex;
-    flex-flow: column wrap;
-    align-content: space-around;
-    height:600px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom:20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+}
+.title-class{
+  width:100%;
+  height:50px;
+  border:2px solid #ccc;
+  border-bottom: 1px solid transparent;
+  outline: none;
+}
+.content-class{
+  height:50px;
+   width:100%;
+   border:2px solid #ccc;
+   border-top:1px solid transparent;
+   outline: none;
+}
+
+  .container{
+    position:relative;
+    left: 30px;
     width:90%;
-  }
-  
-  .item {
-    width:250px;
-    height: fit-content;
-    margin-bottom:20px; 
-    background-color: white;
-  }
-  
-  .item:nth-child(3n+1) { order: 1; }
-  .item:nth-child(3n+2) { order: 2; }
-  .item:nth-child(3n)   { order: 3; }
-  
-  .container::before,
-  .container::after {
-    content: "";
-    flex-basis: 100%;
-    width: 0;
-    order: 2;
-  }
+    columns:4;
+    column-gap: 10px;
+ }
+ .item{
+   background-color: white;
+   width:200px;
+   height:fit-content;
+   break-inside: avoid;
+   margin-bottom: 20px;
+   border:2px solid #ccc;
+   border-radius:10px;
+}
+.item:hover{
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+.not-it{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 50px;
+}
+.not-it i{
+  font-size:100px;
+}
+.hidden-element{
+  display: none;
+}
+.card-body:hover .hidden-element{
+  display: inline;
+}
+
