--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,24 +1,27 @@
 <div class="notes-area">
 
      <div class="form-input">
-        <input [(ngModel)]="curr_title" class="form-control form-control-lg" placeholder="Add a Title">
-        <input [(ngModel)]="curr_content" class="form-control form-control-lg" placeholder="Take a Note.."><br>
-        <button type="submit" class="btn btn-primary" (click)="addTask()">Add Task</button>
+        <input *ngIf="getStatus()" [(ngModel)]="curr_title" class="title-class" placeholder="Add a Title">
+        <input (click)="hasClicked()" [(ngModel)]="curr_content" class="content-class" placeholder="Take a Note.." (keydown.enter)="addTask()">
+        <!-- <button type="submit" class="btn btn-primary" (click)="addTask()">Add Task</button> -->
      </div>
-   
-    <div class="container" #container>
 
-        <div *ngIf="noteItems.length==0">
-            <h4>No Item To Show</h4>
+     <br><br>
+   
+    <div [ngClass]="{'container':noteItems.length>0}">
+
+        <div *ngIf="noteItems.length==0" class="not-it">
+            <i class="fa-solid fa-lightbulb"></i><br>
+            <h2>No Item To Show</h2>
               </div>
 
         <div  *ngFor="let note of noteItems | filterPipe:curr_search;index as i" class="item">
 
               <div class="card-body">
-                <h5 class="card-title">{{note.title}}</h5>
+                <h5 class="card-title"><p>{{note.title}}</p></h5>
                 <p class="card-text">{{note.content}}</p>
-                <a class="card-link" (click)="removeTask(i)"><i class="fa-solid fa-trash" style="color:darkblue"></i></a>
-                <a class="card-link" (click)="archiveTask(i)"><i class="fa-solid fa-box-archive" style="color:darkblue"></i></a>
+                <a class="card-link hidden-element" (click)="removeTask(i)"><i class="fa-solid fa-trash" style="color:darkblue"></i></a>
+                <a class="card-link hidden-element" (click)="archiveTask(i)"><i class="fa-solid fa-box-archive" style="color:darkblue"></i></a>
                 </div>
             </div>
           </div> 
