--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -17,8 +17,8 @@
 
 .nav-list-item:hover{
     
-    background-color:lightgray;
-    border-radius: 10px;
+    background-color:rgba(235, 128, 35,0.5);
+    border-radius:10px;
 }
 
 
