--- a/src/app/trash/trash.component.css
+++ b/src/app/trash/trash.component.css
@@ -5,16 +5,24 @@
     align-items: center;
     height: 100%;
     width:100%;
-    background-color: red;
+    /* background-color: red; */
 }
-.responses{
-    display:grid;
-    grid-template-columns: 200px 200px 200px 200px;
-    grid-auto-rows: minmax(100px,auto);
-    grid-gap:20px;
-    background-color: aqua;
-    width:90%;
+
+.container{
+    width:85%;
+    columns:4;
+    column-gap: 10px;
+ }
+ .item{
+   background-color: white;
+   width:200px;
+   border:1px solid grey;
+   height:fit-content;
+   break-inside: avoid;
+   margin-bottom: 20px;
+   border:3px solid #ccc;
 }
-.card-body{
-    border:2px solid black;
+.item:hover{
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
+
