--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -48,6 +48,9 @@
 .item:hover{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
+.card-text{
+  word-wrap:break-word;
+}
 .not-it{
   display: flex;
   flex-direction: column;
