view toggle added to the app

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         <div class="logo" routerLink="/">
             <i class="fa-solid fa-rotate-right"></i>
          </div>
-         <div class="logo">
+         <div class="logo" (click)="viewToggled()">
             <i class="fa-solid fa-table-list"></i>
          </div>
          <div class="logo">
