--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -32,16 +32,16 @@
   .container{
     position:relative;
     left: 30px;
-    width:90%;
+    width:96%;
     columns:4;
     column-gap: 10px;
  }
  .item{
    background-color: white;
-   width:200px;
+   width:227px;
    height:fit-content;
    break-inside: avoid;
-   margin-bottom: 20px;
+   margin-bottom: 18px;
    border:2px solid #ccc;
    border-radius:10px;
 }
@@ -60,10 +60,10 @@
 .not-it i{
   font-size:100px;
 }
-.hidden-element{
-  display: none;
-}
-.card-body:hover .hidden-element{
-  display: inline;
+.hidden-element {
+  visibility: hidden;
 }
 
+.item:hover .hidden-element {
+  visibility: visible;
+}
