profile overlay created and dark toggle logic written

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,10 +18,10 @@
          <div class="logo" (click)="viewToggled()">
             <i class="fa-solid fa-table-list"></i>
          </div>
-         <div class="logo">
+         <div class="logo" (click)="darkToggled()">
             <i class="fa-solid fa-gear"></i>
          </div>
-         <div class="profile-logo">
+         <div class="profile-logo" (click)="profileToggled()">
             <i class="fa-solid fa-user"></i>
          </div>
      </div>
