--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,12 @@
-<p>profile works!</p>
+<div class="backdrop"></div>
+<div class="profile-area">
+    <div class="main-area">
+        <p>{{'oshanpandit@gmail.com'}}</p>
+        <div class="icon"><p>O</p></div>
+        <p>Hii Oshan</p>
+        <div class="buttons">
+        <button class="clickable"><i class="fa-solid fa-plus"></i>&nbsp;Add Account</button>
+        <button class="clickable"><i class="fa-solid fa-arrow-right-to-bracket"></i>&nbsp;SignOut</button>
+    </div>
+    </div>
+</div>
