--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid g-0">
     <app-header (sideNavToggled)="sideNavStatus=$event;"></app-header>
     <main>
-        <app-side-nav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open':sideNavStatus}">
+        <app-side-nav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open':sideNavStatus,'side-dark':isDark==true}">
         </app-side-nav>
         <div class="display-area" [ngClass]="{'display-area-shrink':sideNavStatus}">
             <!-- <p>Main Display Area</p> -->
