--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,10 @@
 nav{
     height:100%;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 .header-dark{
-    background-color: #2d2e2e;
+    background-color:black;
 }
 .font-dark{
     color:white;
