--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,29 +1,44 @@
-<nav class="header navbar navbar-expand" [ngClass]="{'header-dark':isDark==true}">
+<header>
+   <nav class="header navbar navbar-expand" [ngClass]="{'header-dark':isDark==true}">
 
-     <div class="side-nav-button p-2 me-3 text-light" (click)="SideNavToggle()">
-         <i class="fa-solid fa-bars"></i>
-     </div>
-
-     <div class="navbar-brand px-4"><h2 [ngClass]="{'font-dark':isDark==true}">Keep</h2></div>
-
-     <div class="search d-flex me-5">
-         <input (input)="onSubmit($event)" ngModel name="search" class="form-control me-2" type="search" placeholder="Search by Title or Note">
-         <!-- <button class="btn btn-outline-light" type="submit">Search</button> -->
-     </div>
-
-     <div class="icons">
-        <div class="logo" routerLink="/">
-            <i [ngClass]="{'font-dark':isDark==true}" class="fa-solid fa-rotate-right"></i>
-         </div>
-         <div class="logo" (click)="viewToggled()">
-            <i [ngClass]="{'font-dark':isDark==true}" class="fa-solid fa-table-list"></i>
-         </div>
-         <div class="logo" (click)="darkToggled()">
-            <i [ngClass]="{'font-dark':isDark==true}" class="fa-solid fa-gear"></i>
-         </div>
-         <div class="profile-logo" (click)="profileToggled()">
-            <i class="fa-solid fa-user"></i>
-         </div>
-     </div>
-     <!-- <h1 style="color:white">{{curr_search}}</h1> -->
-</nav>
+      <div class="side-nav-button p-2 me-3 text-light" (click)="SideNavToggle()">
+          <i class="fa-solid fa-bars"></i>
+      </div>
+ 
+      <div class="navbar-brand px-4"><h2 [ngClass]="{'font-dark':isDark==true}">Keep</h2></div>
+ 
+      <div class="search d-flex me-5">
+          <input (input)="onSubmit($event)" ngModel name="search" class="form-control me-2" type="search" placeholder="Search by Title or Note">
+          <!-- <button class="btn btn-outline-light" type="submit">Search</button> -->
+      </div>
+ 
+ 
+      <div class="icons">
+ 
+       <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Menu
+          </button>
+          <ul class="dropdown-menu">
+            <li><span class="dropdown-item">Refresh</span></li>
+            <li><span class="dropdown-item">View</span></li>
+            <li><span class="dropdown-item" href="#">Theme</span></li>
+          </ul>
+        </div>
+ 
+         <div class="logo" routerLink="/">
+             <i [ngClass]="{'font-dark':isDark==true}" class="fa-solid fa-rotate-right"></i>
+          </div>
+          <div class="logo" (click)="viewToggled()">
+             <i [ngClass]="{'font-dark':isDark==true}" class="fa-solid fa-table-list"></i>
+          </div>
+          <div class="logo" (click)="darkToggled()">
+             <i [ngClass]="{'font-dark':isDark==true}" class="fa-solid fa-gear"></i>
+          </div>
+          <div class="profile-logo" (click)="profileToggled()">
+             <i class="fa-solid fa-user"></i>
+          </div>
+      </div>
+      <!-- <h1 style="color:white">{{curr_search}}</h1> -->
+ </nav>
+</header>
