--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,15 @@
+header{
+    height:100%;
+    width:100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 nav{
     height:100%;
+    width:100%;
     background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 .header-dark{
     background-color:#202124;
@@ -28,7 +36,8 @@ nav{
 }
 
 .search{
-    width:60%;
+    width:55%;
+    height:95%;
     border-radius:10px;
 }
 .search input{
@@ -38,14 +47,44 @@ nav{
 .search input:hover{
     background-color: white;
 }
+
+.dropdown{
+
+    display:none;
+}
+
+.dropdown button{
+    background:transparent;
+    color:black;
+    width:fit-content;
+    height: fit-content;
+    font-size:15px;
+}
+
+.dropdown ul li span{
+    width:200px;
+    font-size:13px;
+}
 .icons{
-    width:20%;
+    width:22%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .logo{
+    height:45px;
+    width:45px;
+    border-radius: 50%;
+    max-width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo:hover{
+    background-color: #c4bfbe;
+}
+.logo i{
     color: #787a7a;
     font-size:22px;
 }
@@ -58,21 +97,67 @@ nav{
     align-items: center;
     color:white;
     font-size: 20px;
-    border: 2px solid #000;
     border-radius: 50%;
     background-color: blueviolet;
 }
 
-.logo:hover{
-    width:45px;
-    height:45px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #000;
-    background-color: #c4bfbe;
-}
 .profile-logo:hover{
     background-color: lightslategray;
+}
+
+@media screen and (max-width: 1000px) {
+    .logo{
+        height:35px;
+        width:35px;
+    }
+    .logo i{
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+        .logo{
+            display: none;
+        }
+        .dropdown{
+            display:block;
+        }
+        .profile-logo{
+            height:40px;
+            width:40px;
+        }
+        .profile-logo i{
+            font-size: 17px;
+        }
+}
+
+@media screen and (max-width: 700px) {
+    
+    .side-nav-button{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .logo{
+        display: none;
+    }
+    .dropdown{
+        display:block;
+        margin-right:5%;
+    }
+    .dropdown button{
+        width:fit-content;
+        font-size: 12px;
+    }
+    .dropdown ul li span{
+        font-size: 10px;
+    }
+    .profile-logo{
+        height: 35px;
+        width:35px;
+    }
+    .profile-logo i{
+        font-size: 15px;
+    }
 }
