--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -1,5 +1,5 @@
 .side-nav-content{
-    width:230px;
+    width:90%;
     margin-left:10px;
     margin-right:10px;
     margin-top:10px;
@@ -12,29 +12,28 @@
 .nav-list-item{
     display: flex;
     align-items: center;
+    justify-content:space-around;
     height:50px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    font-size:20px;
+    width:90%;
 }
 
 .nav-list-item:hover{
     
     background-color:rgba(235, 128, 35,0.5);
-    border-radius:10px;
 }
-
 
 .nav-list-item i{
     font-size:20px;
-    height:25px;
-    width:25px;
-    margin-right:15px;
-    margin-left:10px;
-    text-align:center;
-    line-height: 25px;
 }
 
 .nav-list-item span{
-    width:170px;
+    width:90%;
     text-transform:capitalize;
+    margin-left:8%;
+    font-size: 18px;
 }
 a{
     color:black;
@@ -42,4 +41,12 @@ a{
 }
 .font-dark{
     color:white;
+}
+.closed-nav{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height:45px;
+   width:45px;
+   border-radius: 50%;
 }
