--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100vh-4rem);
     width:100%;
 }
 .notes-dark{
@@ -24,27 +23,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom:20px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
+    margin-bottom:4%;
+    border-radius:6px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 }
 .form-input input{
-  border-radius: 10px;
   background-color:transparent;
- 
-}
+ }
 .title-class{
   width:100%;
   height:50px;
-  border:2px solid #ccc; 
-  border-bottom: 1px solid transparent; 
+  border:none;
   outline: none;
 }
 .content-class{
    height:50px;
    width:100%;
-   border:2px solid #ccc;
-   border-top:1px solid transparent;
+   border:none;
    outline: none; 
 }
 
