--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>Page Not Found!!</p>
+<div class="page-not-found-container">
+    <div class="page-not-found-content">
+      <h1>404 - Page Not Found</h1>
+    </div>
+  </div>
+  
